@@ -59,14 +59,21 @@ function Disable-IisSecurityAuthentication
         [Parameter(Mandatory=$true,ParameterSetName='Basic')]
         [Switch]
         # Enable basic authentication.
-        $Basic
+        $Basic,
+        
+        [Parameter(Mandatory=$true,ParameterSetName='Windows')]
+        [Switch]
+        # Enable Windows authentication.
+        $Windows
     )
     
-    $getArgs = @{ $pscmdlet.ParameterSetName = $true; }
+    $authType = $pscmdlet.ParameterSetName
+    $getArgs = @{ $authType = $true; }
     $authSettings = Get-IisSecurityAuthentication -SiteName $SiteName -Path $Path @getArgs
     $authSettings.SetAttributeValue('enabled', 'False')
-    if( $pscmdlet.ShouldProcess( "$SiteName/$Path", "disable anonymous authentication" ) )
+    if( $pscmdlet.ShouldProcess( "$SiteName/$Path", ("disable {0} authentication" -f $authType) ) )
     {
+        Write-Host ('IIS:{0}/{1}: disabling {2} authentication' -f $SiteName,$Path,$authType)
         $authSettings.CommitChanges()
     }
 }
