@@ -17,6 +17,9 @@ This release contains many backwards incompatible changes.  Take the following s
  * Replace usages of `Get-PathCanonicalCase` with [Resolve-PathCase](http://get-carbon.org/help/Resolve-PathCase.ps1).
  * Replace usages of `Set-IisAnonymousAuthentication` with `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1) -Anonymous` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1) -Anonymous`.
  * Replace usages of `Set-IisBasicAuthentication` with `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1) -Basic` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1) -Basic`.
+ * Replace usages of `Set-IisWindowsAuthentication` used to enable/disable Windows authentication with `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1) -Windows` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1) -Windows`, respectively.  [Set-IisWindowsAuthentication](http://get-carbon.org/help/Set-IisWindowsAuthentication.ps1) can still be used to manage the kernel mode authentication.
+ * Replace usages of `[Set-IisWindowsAuthentication](http://get-carbon.org/help/Set-IisWindowsAuthentication.ps1) -UseKernelMode` with `Set-IisWindowsAuthentication` (no parameter).  Replace usages of `Set-IisWindowsAuthentication` (no parameters) with `Set-IisWindowsAuthentication -DisableKernelMode`. We've switched the defaults for `Set-IisWindowsAuthentication` to enable kernel mode by default, since this is IIS's default.
+
  
 ## Enhancements
  * Created new [Get-WindowsFeature](http://get-carbon.org/help/Get-WindowsFeature.html) function for getting a list of available Windows features.
@@ -38,10 +41,11 @@ This release contains many backwards incompatible changes.  Take the following s
  * Renamed `Get-PathCanonicalCase` with [Resolve-PathCase](http://get-carbon.org/help/Resolve-PathCase.ps1).  Added support for piping in `Get-Item` and `Get-ChildItem` output, e.g. `Get-Item C:\WINDOWS | Resolve-PathCase` returns C:\Windows.
  * Replaced `Set-IisAnonymousAuthentication` with `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1)` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1)`.
  * Replaced `Set-IisBasicAuthentication` with `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1)` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1)`.
+ * Moved code to enable/disable Windows authentication from [Set-IisWindowsAuthentication](http://get-carbon.org/help/Set-IisWindowsAuthentication.html) to  `[Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.ps1)` and `[Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.ps1)`.
  * Created [Get-IisConfigurationSection](http://get-carbon.org/help/Get-IisConfigurationSection.ps1) function for getting a site's (and optional sub-directory's) [Microsoft.Web.Administration.ConfigurationSection](http://msdn.microsoft.com/en-us/library/microsoft.web.administration.configurationsection(v=vs.90).aspx) objects for an arbitrary IIS configuration section.
  * Created [Get-IisSecurityAuthentication](http://get-carbon.org/help/Get-IisSecurityAuthentication.ps1) function for getting a site's (and optional sub-directory's)  [anonymous, basic, digest, or Windows authentication configuration section](http://msdn.microsoft.com/en-us/library/microsoft.web.administration.configurationsection(v=vs.90).aspx).
  * Created [Test-IisSecurityAuthentication](http://get-carbon.org/help/Test-IisSecurityAuthentication.ps1) function for testing if anonymous, basic, digest, or Windows authentication is enabled for a website (and optional sub-directory).
- 
+ * Switched the default behavior of [Set-IisWindowsAuthentication](http://get-carbon.org/help/Set-IisWindowsAuthentication.ps1) to enable kernel mode.  To disable kernel mode, use the `DisableKernelMode` switch.
  
 # 0.4.0.1 (18 December 2012)
 
